# ComputacionGrafica

./: avion.cpp
aeropuerto/: CMakeLists.txt  main.cpp
avion/: CMakeLists.txt  avion.cpp  chopper  helicopter.cpp  main  main.cpp
avioncpp/: CMakeLists.txt  main.cpp
lab4/: 4. Laboratorio 4 (Avión).docx  CMakeLists.txt  Laboratorio 4 (Avión).docx  laboratorio 4.1.txt  laboratorio 4.2.txt  laboratorio 4.3.txt  laboratorio 4.4.txt  laboratorio 4.txt  main.cpp
paisaje/: main.cpp
taller3/: CMakeLists.txt  main.cpp
